--- a/pertemuan1/index.html
+++ b/pertemuan1/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1 class="tag1">hello world</h1>
+    <div class="container">
+        <div class="terminal">
+            <div class="terminal-header">
+                <div class="terminal-buttons">
+                    <span class="close"></span>
+                    <span class="minimize"></span>
+                    <span class="maximize"></span>
+                </div>
+                <div class="terminal-title">Terminal</div>
+            </div>
+            <div class="terminal-content">
+
+                <h1 id="tag1" class="title"></h1>
+                <button class="button1"  id="btn1" onclick="greeting()">Saalam</button>
+
+                <p id="description" class="text"></p>
+            </div>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 </html>
