commit kedua ngak ada perubahan

--- a/pertemuan1/index.html
+++ b/pertemuan1/index.html
@@ -21,12 +21,15 @@
             <div class="terminal-content">
 
                 <h1 id="tag1" class="title"></h1>
-                <button class="button1"  id="btn1" onclick="greeting()">Saalam</button>
+
+                <button class="button1"  id="btn1" onclick="sayHello()">Salaam</button>
+                <button class="button1"  id="btn1" onclick="resetCount()">Reset</button>
 
                 <p id="description" class="text"></p>
             </div>
         </div>
     </div>
+
     <script src="index.js"></script>
 </body>
 </html>
