--- a/evalusi_pekan3/index.html
+++ b/evalusi_pekan3/index.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <!-- Jadwal Bulanan (preview) -->
-                <div class="prayer-header" style="margin-top: 14px;">
+                <div class="prayer-header">
                     <div>
                         <div class="prayer-header-main">Jadwal Bulan A di Minggu 1</div>
                     </div>
@@ -206,7 +206,7 @@
                         <div class="card-tag">Hadits Arbain</div>
                         <div class="card-title">JUDUL • NO HADITS</div>
                         <div class="card-meta">Source • /hadits/arbain/acak</div>
-                        <div class="card-arabic" style="font-size: 16px;">
+                        <div class="card-arabic" >
                             DATA TEXT ARAB DISINI
                         </div>
                         <div class="card-content">
@@ -242,7 +242,7 @@
                         <div class="card-tag">Asmaul Husna</div>
                         <div class="card-title">ARAB • LATIN</div>
                         <div class="card-meta">source • /husna/acak</div>
-                        <div class="card-arabic" style="font-size: 26px;">
+                        <div class="card-arabic">
                             DATA ARAB DISINI
                         </div>
                         <div class="card-content">
