--- a/evaluasi_bulanan/html/home.html
+++ b/evaluasi_bulanan/html/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mini To-Do List + Random Hadits</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
   <!-- To-Do List -->
@@ -21,6 +21,6 @@
     <div id="haditsContainer">Klik tombol untuk ambil hadits...</div>
   </div>
 
-  <script src="modules/home.js"></script>
+  <script src="../modules/home.js"></script>
 </body>
 </html>
