--- a/evaluasi_bulanan/html/login.html
+++ b/evaluasi_bulanan/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
 
@@ -20,9 +20,9 @@
 
             <button type="submit" id="button">Login</button>
 
-            <p class="link">Belum punya akun? <a href="regist.html">Register</a></p>
+            <p class="link">Belum punya akun? <a href="regis.html">Register</a></p>
         </form>
     </div>
-<script src="modules/login.js"></script>
+<script src="../modules/login.js"></script>
 </body>
 </html>
