--- a/evaluasi_bulanan/html/regis.html
+++ b/evaluasi_bulanan/html/regis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="regis.css">
+    <link rel="stylesheet" href="../css/regis.css">
 </head>
 <body>
 
@@ -27,6 +27,6 @@
             <p class="link">Sudah punya akun? <a href="login.html">Login</a></p>
         </form>
     </div>
-<script src="modules/regis.js"></script>
+<script src="../modules/regis.js"></script>
 </body>
 </html>
